# freelancer-earnings-analyzer

./: .env.example  .gitignore  LICENSE  README.md  REPORT.md  pyproject.toml
src/: data_analyzer.py  data_loader.py  llm_integration.py  main.py  utils.py
tests/: test_data_loader.py
