[project]
name = "freelancer-analyzer"
version = "0.1.0"
description = "AI-powered freelancer earnings data analyzer with CLI interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52.1",
    "click>=8.2.1",
    "httpx[socks]>=0.28.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
freelancer-analyzer = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.3.5",
    "ruff>=0.11.12",
]
